Model Processor Execution: Update Docker repository URL

--- a/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/docker/execution.yaml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/docker/execution.yaml
@@ -2,7 +2,7 @@
   - description: "LEMMA MongoDB Generator"
   - docker:
     - image: "lemma/mongodb_generator:latest"
-    - repository: "repository.seelab.fh-dortmund.de:51900"
+    - repository: "docker.repository.seelab.fh-dortmund.de"
     - buildscript: "./build.sh"
     - lemma_version_file: "../pom.xml"
 
