--- a/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/execution.yaml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/execution.yaml
@@ -2,7 +2,7 @@
   - description: "LEMMA Java Generator"
   - docker:
     - image: "lemma/java_generator:latest"
-    - repository: "repository.seelab.fh-dortmund.de:51900"
+    - repository: "docker.repository.seelab.fh-dortmund.de"
     - buildscript: "./build.sh"
     - lemma_version_file: "../gradle.properties"
   - execution_steps:
