--- a/code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.zuul/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.zuul/pom.xml
@@ -121,6 +121,10 @@
                   <manifest>
                     <mainClass>de.fhdo.lemma.model_processing.code_generation.springcloud.zuul.ZuulCodeGenerator</mainClass>
                   </manifest>
+                  <manifestEntries>
+                    <!-- Prevent "WARNING: sun.reflect.Reflection.getCallerClass is not supported" from log4j -->
+                    <Multi-Release>true</Multi-Release>
+                  </manifestEntries>
                 </archive>
                 <descriptors>
                     <descriptor>assembly.xml</descriptor>
