Releng: Prevent illegal reflective access warnings in Docker-based model processor executions until LEMMA is fully compatible with the Java Platform Module System

--- a/code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.zuul/docker/Dockerfile
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.springcloud.zuul/docker/Dockerfile
@@ -5,4 +5,5 @@ COPY \
     de.fhdo.lemma.model_processing.code_generation.springcloud.zuul/target/de.fhdo.lemma.model_processing.code_generation.springcloud.zuul-$LEMMA_VERSION-standalone.jar \
     /home/zuul.jar
 
-ENTRYPOINT ["java", "-jar", "/home/zuul.jar"]
+# "--add-opens java.base/java.lang=ALL-UNNAMED" prevents "WARNING: An illegal reflective access operation has occurred" until LEMMA is fully compatible with JPMS
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/home/zuul.jar"]
