--- a/de.fhdo.lemma.analyzer/docker/Dockerfile
+++ b/de.fhdo.lemma.analyzer/docker/Dockerfile
@@ -4,4 +4,5 @@ ARG LEMMA_VERSION
 COPY build/libs/de.fhdo.lemma.analyzer-$LEMMA_VERSION-standalone.jar \
     /home/analyzer.jar
 
-ENTRYPOINT ["java", "-jar", "/home/analyzer.jar"]
+# "--add-opens java.base/java.lang=ALL-UNNAMED" prevents "WARNING: An illegal reflective access operation has occurred" until LEMMA is fully compatible with JPMS
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/home/analyzer.jar"]
