--- a/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/docker/Dockerfile
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/docker/Dockerfile
@@ -5,6 +5,5 @@ COPY \
     de.fhdo.lemma.model_processing.code_generation.container_base/target/de.fhdo.lemma.model_processing.code_generation.container_base-$LEMMA_VERSION-standalone.jar \
     /home/container_base.jar
 
-
-
-ENTRYPOINT ["java", "-jar", "/home/container_base.jar"]
+# "--add-opens java.base/java.lang=ALL-UNNAMED" prevents "WARNING: An illegal reflective access operation has occurred" until LEMMA is fully compatible with JPMS
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/home/container_base.jar"]
