--- a/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/Dockerfile
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.java_base/docker/Dockerfile
@@ -33,4 +33,5 @@ COPY \
     de.fhdo.lemma.model_processing.code_generation.springcloud.kafka/build/libs/de.fhdo.lemma.model_processing.code_generation.springcloud.kafka-$LEMMA_VERSION.jar \
     /home/genlets/de.fhdo.lemma.model_processing.code_generation.springcloud.kafka.jar
 
-ENTRYPOINT ["java", "-jar", "/home/java_base.jar"]
+# "--add-opens java.base/java.lang=ALL-UNNAMED" prevents "WARNING: An illegal reflective access operation has occurred" until LEMMA is fully compatible with JPMS
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/home/java_base.jar"]
