--- a/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/docker/Dockerfile
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/docker/Dockerfile
@@ -5,4 +5,5 @@ COPY \
     de.fhdo.lemma.model_processing.code_generation.mongodb/target/de.fhdo.lemma.model_processing.code_generation.mongodb-$LEMMA_VERSION-standalone.jar \
     /home/mongodb.jar
 
-ENTRYPOINT ["java", "-jar", "/home/mongodb.jar"]
+# "--add-opens java.base/java.lang=ALL-UNNAMED" prevents "WARNING: An illegal reflective access operation has occurred" until LEMMA is fully compatible with JPMS
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/home/mongodb.jar"]
