Releng: Migrate build dependencies to Xtext 2.26 to prevent illegal reflective access during model parsing

--- a/de.fhdo.lemma.data.avro.parent/pom.xml
+++ b/de.fhdo.lemma.data.avro.parent/pom.xml
@@ -57,6 +57,7 @@
         <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
         <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
         <tycho-version>2.3.0</tycho-version>
+        <xtext-version>2.26.0</xtext-version>
     </properties>
 
     <repositories>
@@ -64,6 +65,12 @@
             <id>eclipse</id>
             <layout>p2</layout>
             <url>http://download.eclipse.org/releases/${eclipse-version}/</url>
+        </repository>
+
+        <repository>
+            <id>Xtext Update Site</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext-version}/</url>
         </repository>
     </repositories>
 
