--- a/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
@@ -16,6 +16,7 @@
         <snakeyaml.version>1.21</snakeyaml.version>
         <maven-assembly.version>3.3.0</maven-assembly.version>
         <jackson.dataformat.version>2.12.3</jackson.dataformat.version>
+        <groovy.version>3.0.3</groovy.version>
     </properties>
 
     <dependencies>
@@ -79,6 +80,12 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.dataformat.version}</version>
+        </dependency>
+        <!-- Required by log4j (Groovy execution engine) -->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-jsr223</artifactId>
+            <version>${groovy.version}</version>
         </dependency>
     </dependencies>
 
