--- a/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
@@ -17,6 +17,7 @@
         <maven-assembly.version>3.3.0</maven-assembly.version>
         <jackson.dataformat.version>2.12.3</jackson.dataformat.version>
         <groovy.version>3.0.3</groovy.version>
+        <kotlin.version>1.3.72</kotlin.version>
     </properties>
 
     <dependencies>
@@ -29,7 +30,6 @@
             <groupId>de.fhdo.lemma.model_processing</groupId>
             <artifactId>de.fhdo.lemma.model_processing</artifactId>
             <version>${project.version}</version>
-            <classifier>all-dependencies</classifier>
         </dependency>
         <dependency>
             <groupId>de.fhdo.lemma.operationdsl</groupId>
@@ -86,6 +86,11 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-jsr223</artifactId>
             <version>${groovy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
         </dependency>
     </dependencies>
 
