Container Base Generator: Support the derivation of port specifications in generated Docker Compose files using corresponding model elements
    This commit improves the generation of port specifications in Docker Compose files as follows:
        - The ports of deployed Spring microservices are now derived from possible applications of the Application aspect from the Spring
          technology model. This approach prevents duplicate (possibly contradicting) modeling of ports using the microservice-specific
          Application aspect or the container-specific "serverPort" configuration property.
        - In case no port is determinable from the model of a deployed microservice, a potential value for the "serverPort" configuration
          property is now correctly used in the generation of the corresponding port specification in the Docker Compose file.

--- a/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.container_base/pom.xml
@@ -32,6 +32,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>de.fhdo.lemma.model_processing.utils</groupId>
+            <artifactId>de.fhdo.lemma.model_processing.utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>de.fhdo.lemma.operationdsl</groupId>
             <artifactId>de.fhdo.lemma.operationdsl</artifactId>
             <version>${project.version}</version>
@@ -64,6 +69,11 @@
         <dependency>
             <groupId>de.fhdo.lemma.technology.technologydsl</groupId>
             <artifactId>de.fhdo.lemma.technology.technologydsl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.fhdo.lemma.intermediate</groupId>
+            <artifactId>de.fhdo.lemma.service.intermediate.metamodel</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
