--- a/de.fhdo.lemma.service.openapi/pom.xml
+++ b/de.fhdo.lemma.service.openapi/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.6</version>
         </dependency>
+        <dependency>
+		    <groupId>info.picocli</groupId>
+		    <artifactId>picocli</artifactId>
+		    <version>3.9.6</version>
+		</dependency>
     </dependencies>
     <build>
         <pluginManagement>
