--- a/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/pom.xml
+++ b/code generators/de.fhdo.lemma.model_processing.code_generation.mongodb/pom.xml
@@ -20,8 +20,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>de.fhdo.lemma.model_processing.code_generation.container_base</groupId>
-            <artifactId>de.fhdo.lemma.model_processing.code_generation.container_base</artifactId>
+            <groupId>de.fhdo.lemma.model_processing.code_generation.deployment_base</groupId>
+            <artifactId>de.fhdo.lemma.model_processing.code_generation.deployment_base</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
