--- a/de.fhdo.lemma.data.avro.parent/pom.xml
+++ b/de.fhdo.lemma.data.avro.parent/pom.xml
@@ -45,6 +45,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <atl-version>4.4.0</atl-version>
         <build-helper-maven-plugin-version>3.2.0</build-helper-maven-plugin-version>
         <data-extractor-version>${project.version}</data-extractor-version>
         <data-metamodel-version>${project.version}</data-metamodel-version>
@@ -61,6 +62,12 @@
     </properties>
 
     <repositories>
+        <repository>
+            <id>ATL Update Site</id>
+            <layout>p2</layout>
+            <url>http://download.eclipse.org/mmt/atl/updates/releases/${atl-version}/</url>
+        </repository>
+
         <repository>
             <id>eclipse</id>
             <layout>p2</layout>
