Releng: Add script to check releng-related configuration files for consistency

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ examples/model-processing-latest/run11.sh
 examples/model-processing-latest/generated code/
 de.fhdo.lemma.service.openapi.tests/lib/*
 de.fhdo.lemma.service.openapi.tests/test-model-gen/*
+.vscode
+*.code-workspace
