--- a/de.fhdo.lemma.service.openapi/build.properties
+++ b/de.fhdo.lemma.service.openapi/build.properties
@@ -5,21 +5,21 @@ bin.includes = META-INF/,\
                .,\
                lib/btf-1.3.jar,\
                lib/commons-codec-1.11.jar,\
-               lib/commons-io-2.11.0.jar,\
-               lib/commons-lang3-3.2.1.jar,\
+               lib/commons-io-2.14.0.jar,\
+               lib/commons-lang3-3.13.0.jar,\
                lib/commons-logging-1.2.jar,\
-               lib/httpclient-4.5.13.jar,\
-               lib/httpcore-4.4.13.jar,\
-               lib/jackson-annotations-2.12.1.jar,\
-               lib/jackson-core-2.12.1.jar,\
+               lib/httpclient-4.5.14.jar,\
+               lib/httpcore-4.4.16.jar,\
+               lib/jackson-annotations-2.15.3.jar,\
+               lib/jackson-core-2.15.3.jar,\
                lib/jackson-coreutils-2.0.jar,\
                lib/jackson-coreutils-equivalence-1.0.jar,\
-               lib/jackson-databind-2.12.1.jar,\
-               lib/jackson-dataformat-yaml-2.12.1.jar,\
-               lib/jackson-datatype-jsr310-2.12.1.jar,\
-               lib/jakarta.activation-api-1.2.1.jar,\
+               lib/jackson-databind-2.15.3.jar,\
+               lib/jackson-dataformat-yaml-2.15.3.jar,\
+               lib/jackson-datatype-jsr310-2.15.2.jar,\
+               lib/jakarta.activation-api-1.2.2.jar,\
                lib/jakarta.validation-api-2.0.2.jar,\
-               lib/jakarta.xml.bind-api-2.3.2.jar,\
+               lib/jakarta.xml.bind-api-2.3.3.jar,\
                lib/joda-time-2.10.5.jar,\
                lib/jopt-simple-5.0.4.jar,\
                lib/json-patch-1.13.jar,\
@@ -28,24 +28,23 @@ bin.includes = META-INF/,\
                lib/libphonenumber-8.11.1.jar,\
                lib/logback-classic-1.2.6.jar,\
                lib/logback-core-1.2.6.jar,\
-               lib/mailapi-1.6.2.jar,\
                lib/msg-simple-1.2.jar,\
+               lib/picocli-3.9.6.jar,\
                lib/rhino-1.7.7.2.jar,\
                lib/slf4j-api-1.7.32.jar,\
-               lib/snakeyaml-1.27.jar,\
-               lib/swagger-annotations-1.6.3.jar,\
-               lib/swagger-annotations-2.1.11.jar,\
-               lib/swagger-compat-spec-parser-1.0.56.jar,\
-               lib/swagger-core-1.6.3.jar,\
-               lib/swagger-core-2.1.11.jar,\
-               lib/swagger-models-1.6.3.jar,\
-               lib/swagger-models-2.1.11.jar,\
-               lib/swagger-parser-1.0.56.jar,\
-               lib/swagger-parser-2.0.29.jar,\
-               lib/swagger-parser-core-2.0.29.jar,\
-               lib/swagger-parser-v2-converter-2.0.29.jar,\
-               lib/swagger-parser-v3-2.0.29.jar,\
-               lib/uri-template-0.10.jar,\
-               lib/validation-api-1.1.0.Final.jar,\
-               lib/picocli-3.9.6.jar
+               lib/snakeyaml-2.2.jar,\
+               lib/swagger-annotations-1.6.12.jar,\
+               lib/swagger-annotations-2.2.17.jar,\
+               lib/swagger-compat-spec-parser-1.0.68.jar,\
+               lib/swagger-core-1.6.12.jar,\
+               lib/swagger-core-2.2.17.jar,\
+               lib/swagger-models-1.6.12.jar,\
+               lib/swagger-models-2.2.17.jar,\
+               lib/swagger-parser-1.0.68.jar,\
+               lib/swagger-parser-2.1.18.jar,\
+               lib/swagger-parser-core-2.1.18.jar,\
+               lib/swagger-parser-safe-url-resolver-2.1.18.jar,\
+               lib/swagger-parser-v2-converter-2.1.18.jar,\
+               lib/swagger-parser-v3-2.1.18.jar,\
+               lib/uri-template-0.10.jar
 
