--- a/de.fhdo.lemma.service.openapi.tests/pom.xml
+++ b/de.fhdo.lemma.service.openapi.tests/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>io.swagger.parser.v3</groupId>
             <artifactId>swagger-parser</artifactId>
-            <version>2.0.29</version>
+            <version>${swagger-parser-version}</version>
         </dependency>
 
         <!-- For testing -->
