--- a/de.fhdo.lemma.service.openapi/pom.xml
+++ b/de.fhdo.lemma.service.openapi/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>io.swagger.parser.v3</groupId>
             <artifactId>swagger-parser</artifactId>
-            <version>2.1.18</version>
+            <version>${swagger-parser-version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
