--- a/de.fhdo.lemma.service.openapi.tests/.classpath
+++ b/de.fhdo.lemma.service.openapi.tests/.classpath
@@ -8,57 +8,35 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="lib/logback-classic-1.2.6.jar"/>
-	<classpathentry kind="lib" path="lib/logback-core-1.2.6.jar"/>
-	<classpathentry kind="lib" path="lib/mailapi-1.6.2.jar"/>
-	<classpathentry kind="lib" path="lib/msg-simple-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/rhino-1.7.7.2.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.32.jar"/>
-	<classpathentry kind="lib" path="lib/snakeyaml-1.27.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-annotations-1.6.3.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-annotations-2.1.11.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-compat-spec-parser-1.0.56.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-core-1.6.3.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-core-2.1.11.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-models-1.6.3.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-models-2.1.11.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-parser-1.0.56.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-parser-2.0.29.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-parser-core-2.0.29.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-parser-v2-converter-2.0.29.jar"/>
-	<classpathentry kind="lib" path="lib/swagger-parser-v3-2.0.29.jar"/>
-	<classpathentry kind="lib" path="lib/uri-template-0.10.jar"/>
-	<classpathentry kind="lib" path="lib/validation-api-1.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib/animal-sniffer-annotations-1.17.jar"/>
-	<classpathentry kind="lib" path="lib/btf-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/checker-compat-qual-2.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.11.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang3-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/error_prone_annotations-2.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/failureaccess-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/guava-27.0.1-android.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.5.13.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.4.13.jar"/>
-	<classpathentry kind="lib" path="lib/j2objc-annotations-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-annotations-2.12.1.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-2.12.1.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-coreutils-2.0.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-coreutils-equivalence-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-databind-2.12.1.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-dataformat-yaml-2.12.1.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-datatype-jsr310-2.12.1.jar"/>
-	<classpathentry kind="lib" path="lib/jakarta.activation-api-1.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/jakarta.validation-api-2.0.2.jar"/>
-	<classpathentry kind="lib" path="lib/jakarta.xml.bind-api-2.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/joda-time-2.10.5.jar"/>
-	<classpathentry kind="lib" path="lib/jopt-simple-5.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/json-patch-1.13.jar"/>
-	<classpathentry kind="lib" path="lib/json-schema-core-1.2.14.jar"/>
-	<classpathentry kind="lib" path="lib/json-schema-validator-2.2.14.jar"/>
-	<classpathentry kind="lib" path="lib/jsr305-3.0.2.jar"/>
-	<classpathentry kind="lib" path="lib/libphonenumber-8.11.1.jar"/>
-	<classpathentry kind="lib" path="lib/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
+	<classpathentry kind="lib" path="lib/checker-qual-3.37.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.14.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.13.0.jar"/>
+	<classpathentry kind="lib" path="lib/error_prone_annotations-2.21.1.jar"/>
+	<classpathentry kind="lib" path="lib/guava-32.1.3-android.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.5.14.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.4.16.jar"/>
+	<classpathentry kind="lib" path="lib/j2objc-annotations-2.8.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.15.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.15.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.15.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-dataformat-yaml-2.15.3.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-datatype-jsr310-2.15.2.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.activation-api-1.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.xml.bind-api-2.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-2.0.9.jar"/>
+	<classpathentry kind="lib" path="lib/snakeyaml-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-annotations-1.6.12.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-annotations-2.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-compat-spec-parser-1.0.68.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-core-1.6.12.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-core-2.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-models-1.6.12.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-models-2.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-parser-1.0.68.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-parser-2.1.18.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-parser-core-2.1.18.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-parser-safe-url-resolver-2.1.18.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-parser-v2-converter-2.1.18.jar"/>
+	<classpathentry kind="lib" path="lib/swagger-parser-v3-2.1.18.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
