LSP Upgrade: Fix errors in TextMate grammars for the language extension of the ServiceDSL and adjust color themes more to Eclipse dark theme

--- a/vscode_extensions/lemma-technology-mapping/syntaxes/mapping.tmLanguage.json
+++ b/vscode_extensions/lemma-technology-mapping/syntaxes/mapping.tmLanguage.json
@@ -22,7 +22,7 @@
 		"keywords": {
 			"patterns": [{
 				"name": "keyword.control.mapping",
-				"match": "\\b(technology|microservices|type|aspects|protocols|endpoints|aspects|interface|operation|parameters|referref|primitive|complex|->|op|return|type)\\b"
+				"match": "\\b(technology|microservices|type|import|aspects|protocols|endpoints|aspects|interface|operation|parameters|referref|primitive|complex|->|op|return|type)\\b"
 			}]
 		},
 		"strings": {
