--- a/vscode_extensions/lemma-technology-mapping/themes/LEMMA Technology Mapping Modeling Language Theme-color-theme.json
+++ b/vscode_extensions/lemma-technology-mapping/themes/LEMMA Technology Mapping Modeling Language Theme-color-theme.json
@@ -61,7 +61,6 @@
 		{
 			"name": "Operator, Misc",
 			"scope": [
-				"keyword.control",
 				"constant.other.color",
 				"punctuation",
 				"meta.tag",
@@ -71,11 +70,21 @@
 				"punctuation.definition.tag.begin.html",
 				"punctuation.definition.tag.end.html",
 				"punctuation.section.embedded",
+			],
+			"settings": {
+				"foreground": "#89DDFF"
+			}
+		},
+		{
+			"name": "Keyword Eclipse Highlighting",
+			"scope": [
+				"keyword.control",
 				"keyword.other.template",
 				"keyword.other.substitution"
 			],
 			"settings": {
-				"foreground": "#89DDFF"
+				"foreground": "#D03B67",
+				"fontStyle": "bold"
 			}
 		},
 		{
